<resources>
    <string name="app_name">BusApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bus Application</string>
    <string name="nav_header_subtitle">23903@edu.iitu.kz</string>
    <string name="nav_header_desc">Header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_schedule">Schedule</string>
    <string name="menu_search">Search</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="search">Search</string>
    <string name="date_button">15.11.2020</string>
    <string name="arrival">Arrival</string>
    <string name="refresh">Insert DB</string>
    <string name="to_book_text">To book</string>
</resources>